--- a/static.html
+++ b/static.html
@@ -5,12 +5,14 @@
     <style>
        div{
         height: 200px;
-        width: 300px;
+        width: 200px;
         border: solid 1px black;
         border-radius: 5px;
         margin: 10px;
         display: flex;
-        text-align: center;
+        padding-left: 80px;
+        align-items: center;
+
        }
     </style>
 </head>
