css added to reference box

--- a/static.html
+++ b/static.html
@@ -14,6 +14,11 @@
         align-items: center;
 
        }
+
+       .ref-box{
+        font-size: 25px;
+        background-color: #99ffeb;
+       }
     </style>
 </head>
 <body>
