--- a/static.html
+++ b/static.html
@@ -10,7 +10,7 @@
         border-radius: 5px;
         margin: 10px;
         display: flex;
-        padding-left: 80px;
+        padding-left: 60px;
         align-items: center;
 
        }
@@ -18,6 +18,11 @@
        .ref-box{
         font-size: 25px;
         background-color: #99ffeb;
+       }
+
+       .stat-box{
+        font-size: 25px;
+        background-color: #ff99ff;
        }
     </style>
 </head>
