--- a/static.html
+++ b/static.html
@@ -23,6 +23,7 @@
        .stat-box{
         font-size: 25px;
         background-color: #ff99ff;
+        left: 50px;
        }
     </style>
 </head>
