heading for relative position added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <h1>Understanding the Positioning in CSS</h1>
     <div class="container">
-    <a href="">Static Position</a> 
+    <a href="static.html">Static Position</a> 
     <br> <br>
     <a href="">Relative Position</a>
     <br> <br>
