--- a/static.html
+++ b/static.html
@@ -12,7 +12,7 @@
         display: flex;
         padding-left: 60px;
         align-items: center;
-
+       
        }
 
        .ref-box{
@@ -25,13 +25,19 @@
         background-color: #ff99ff;
         left: 50px;
        }
+
+      h1{
+        margin: 20px;
+      }
     </style>
 </head>
 <body>
+    
     <h1>Static Position</h1>
     <div class="ref-box">
         This is reference
     </div>
     <div class="stat-box">This is static position</div>
+
 </body>
 </html>
