heading added for sticky element

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <body>
     <h1>Understanding the Positioning in CSS</h1>
     <div class="container">
-    <a href="static.html">Static Position</a> 
+    <a href="static.html" target="_blank">Static Position</a> 
     <br> <br>
-    <a href="">Relative Position</a>
+    <a href="relative.html" target="_blank">Relative Position</a>
     <br> <br>
     <a href="">Sticky Position</a>
     <br> <br>
