information about mumbai added

--- a/sticky.html
+++ b/sticky.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <title>Sticky Position</title>
+    <style></style>
 </head>
 <body>
-    <h1>Sticky Element:Scroll Down to see the effect</h1>
+    <h1>Mumbai</h1>
+    <p>Mumbai, city, capital of Maharashtra state, southwestern India. It is the country’s financial and commercial center and its principal port on the Arabian Sea.Located on Maharashtra’s coast, Mumbai is India’s most-populous city, and it is one of the largest and most densely populated urban areas in the world. It was built on a site of ancient settlement, and it took its name from the local goddess Mumba—a form of Parvati, the consort of Shiva, one of the principal deities of Hinduism—whose temple once stood in what is now the southeastern section of the city. </p>
 </body>
 </html>
