--- a/sticky.html
+++ b/sticky.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <title>Sticky Position</title>
-    <style></style>
+    <style>
+        h1{
+            margin-left: 550px;
+            font-size: 50px;
+        }
+
+        p{
+            font-size: 25px;
+            margin: 25px;
+        }
+    </style>
 </head>
 <body>
     <h1>Mumbai</h1>
