--- a/sticky.html
+++ b/sticky.html
@@ -12,10 +12,21 @@
             font-size: 25px;
             margin: 25px;
         }
+
+        .mumbai-img{
+            margin-left: 300px;
+            width: 550px;
+        }
     </style>
 </head>
 <body>
     <h1>Mumbai</h1>
     <p>Mumbai, city, capital of Maharashtra state, southwestern India. It is the country’s financial and commercial center and its principal port on the Arabian Sea.Located on Maharashtra’s coast, Mumbai is India’s most-populous city, and it is one of the largest and most densely populated urban areas in the world. It was built on a site of ancient settlement, and it took its name from the local goddess Mumba—a form of Parvati, the consort of Shiva, one of the principal deities of Hinduism—whose temple once stood in what is now the southeastern section of the city. </p>
+
+    <p> It became known as Bombay during the British colonial period, the name possibly an Anglicized corruption of Mumbai or perhaps of Bom Baim (“Good Harbor”), supposedly a Portuguese name for the locale. The name Mumbai was restored officially in 1995, although Bombay remained in common usage.</p>
+
+    <img src="https://t4.ftcdn.net/jpg/01/46/43/87/360_F_146438747_3XYwVkfnYZuukBZYmDM8xeoqENzyhAqa.jpg" alt="mumbai" class="mumbai-img">
+
+    <p>The city of Mumbai occupies a peninsular site on Bombay Island, a landmass originally composed of seven islets lying off the Konkan coast of western India. Since the 17th century the islets have been joined through drainage and reclamation projects, as well as through the construction of causeways and breakwaters, to form Bombay Island. East of the island are the sheltered waters of Mumbai (Bombay) Harbor. Bombay Island consists of a low-lying plain, about one-fourth of which lies below sea level; the plain is flanked on the east and west by two parallel ridges of low hills. Colaba Point, the headland formed on the extreme south by the longer of those ridges, protects Mumbai Harbor from the open sea.</p>
 </body>
 </html>
