position sticky property added to image

--- a/sticky.html
+++ b/sticky.html
@@ -14,8 +14,10 @@
         }
 
         .mumbai-img{
-            margin-left: 300px;
-            width: 550px;
+           
+            width: 400px;
+            position: sticky;
+            top: 10px;
         }
     </style>
 </head>
@@ -28,5 +30,11 @@
     <img src="https://t4.ftcdn.net/jpg/01/46/43/87/360_F_146438747_3XYwVkfnYZuukBZYmDM8xeoqENzyhAqa.jpg" alt="mumbai" class="mumbai-img">
 
     <p>The city of Mumbai occupies a peninsular site on Bombay Island, a landmass originally composed of seven islets lying off the Konkan coast of western India. Since the 17th century the islets have been joined through drainage and reclamation projects, as well as through the construction of causeways and breakwaters, to form Bombay Island. East of the island are the sheltered waters of Mumbai (Bombay) Harbor. Bombay Island consists of a low-lying plain, about one-fourth of which lies below sea level; the plain is flanked on the east and west by two parallel ridges of low hills. Colaba Point, the headland formed on the extreme south by the longer of those ridges, protects Mumbai Harbor from the open sea.</p>
+
+    <p>The western ridge terminates at Malabar Hill, which, rising 180 feet (55 meters) above sea level, is one of the highest points in Mumbai. Between Colaba Point and Malabar Hill lies the shallow expanse of Back Bay. On a slightly raised strip of land between the head of Back Bay and the harbor is an area called the Fort, the site of the 17th-century British fortifications (little of which remains standing) within and around which the city grew; the area is now occupied chiefly by public and commercial offices. From Back Bay the land stretches northward to the central plain. The extreme northern segment of Mumbai is occupied by a large salt marsh.</p>
+
+    <p>The old city covered about 26 square miles (67 square km), stretching from Colaba Point on the southern tip of Bombay Island to the areas known as Mahim and Sion on its northern coast. In 1950 Mumbai expanded northward, embracing the large island of Salsette, which was joined to Bombay Island by a causeway. By 1957 a number of suburban municipal boroughs and some neighboring villages on Salsette were incorporated into Greater Mumbai—the metropolitan region surrounding Bombay Island and the city itself. Since then Greater Mumbai has continued to expand.</p>
+
+    <p>The natural beauty of Mumbai is unsurpassed by that of most other cities in the region. The entrance into Mumbai Harbour from the sea discloses a magnificent panorama framed by the Western Ghats mountain range on the mainland. The wide harbor, studded with islands and dotted with the white sails of innumerable small craft, affords secure shelter to ships, particularly when storms lash the coast. The largest of the harbor’s islands is Elephanta, which is famous for its 8th- and 9th-century Hindu cave temples.</p>
 </body>
 </html>
