fixed position property used

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <br> <br>
     <a href="relative.html" target="_blank">Relative Position</a>
     <br> <br>
-    <a href="">Sticky Position</a>
+    <a href="sticky.html" target="_blank">Sticky Position</a>
     <br> <br>
-    <a href="">Fixed Position</a>
+    <a href="fixed.html" target="_blank">Fixed Position</a>
     <br> <br>
-    <a href="">Absolute Position</a>
+    <a href="absolute.html" target="_blank">Absolute Position</a>
     <br> <br>
 </div>
 </body>
