--- a/fixed.html
+++ b/fixed.html
@@ -49,6 +49,12 @@
         background-color: #ff4d4d;
         border: none;
       }
+
+      .para{
+        font-size: 25px;
+        padding: 10px;
+        text-align: center;
+      }
     </style>
 </head>
 <body>
@@ -69,5 +75,13 @@
 
         </form>
     </div>
+
+    <p class="para">
+       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium optio blanditiis ab eaque, numquam magnam aspernatur facilis aut eveniet. Necessitatibus, tenetur illum! Distinctio animi accusamus ea quas, nobis repellat id doloremque deleniti repudiandae, ab illum illo autem aliquid culpa maxime. Vero, mollitia! Eos delectus tempora doloribus porro, consequatur non perspiciatis! Porro ut velit quis cum expedita voluptatum pariatur impedit enim. Doloribus, numquam, ipsam sapiente asperiores quae soluta qui vero quis fuga laudantium possimus nam assumenda, labore praesentium magni sed error quasi facere ad optio mollitia inventore ratione omnis natus? Eaque eum nemo voluptate, quisquam reprehenderit aliquid fugit. Ut, laudantium amet.
+    </p>
+
+    <p class="para">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius consequuntur sapiente harum placeat labore consequatur, voluptatem nostrum tenetur culpa corporis cupiditate assumenda alias, pariatur facere ipsum, velit tempora maxime unde.
+    </p>
 </body>
 </html>
