--- a/absolute.html
+++ b/absolute.html
@@ -2,8 +2,24 @@
 <html lang="en">
 <head>
     <title>Absolute Position</title>
+    <style>
+        .container{
+            height: 440px;
+            width: 350px;
+            border: 1px solid black;
+            margin-left: 500px;
+            margin-top: 80px;
+        }
+
+        .image{
+            height: 200px;
+        }
+    </style>
+
 </head>
 <body>
-    
+    <div class="container">
+        <img src="https://img.freepik.com/premium-vector/avatar-portrait-young-caucasian-woman-round-frame-vector-cartoon-flat-illustration_551425-22.jpg" alt="women template" class="image">
+    </div>
 </body>
 </html>
