background color added

--- a/absolute.html
+++ b/absolute.html
@@ -3,7 +3,9 @@
 <head>
     <title>Absolute Position</title>
     <style>
-        
+        body{
+            background-color: bisque;
+        }
         .container{
             height: 440px;
             width: 350px;
@@ -12,6 +14,7 @@
             top: 80px;
             margin-left: 500px;
             border-radius: 10px;
+            background-color: aliceblue;
         }
 
         .image{
@@ -23,9 +26,14 @@
         }
 
        h1{
-        margin-top: 130px;
+        margin-top: 150px;
         margin-left: 60px;
        
+       }
+
+       .para{
+        font-size: 20px;
+        padding: 10px;
        }
     </style>
 
@@ -34,7 +42,7 @@
     <div class="container">
         <img src="https://img.freepik.com/premium-vector/avatar-portrait-young-caucasian-woman-round-frame-vector-cartoon-flat-illustration_551425-22.jpg" alt="women template" class="image">
         <h1>Lucille Roberts</h1>
-        <p> Lucille Roberts is a women’s fitness chain founded by Lucille Roberts. The company focuses on offering women-only gyms and fitness programs, with an emphasis on empowering women through physical fitness and wellness.</p>
+        <p class="para"> Lucille Roberts is a women’s fitness chain founded by Lucille Roberts. The company focuses on offering women-only gyms and fitness programs, with an emphasis on empowering women through physical fitness and wellness.</p>
     </div>
 </body>
 </html>
